<resources>
    <string name="app_name">Dashboard</string>
    <string name="act_home">Home</string>
    <string name="login_progress_text">Logging in…</string>
    <string name="drawer_reload_text">Reload Branches</string>
    <string name="drawer_facebook_text">Check us on Facebook</string>
    <string name="drawer_twitter_text">Follow us on Twitter</string>
    <string name="drawer_instagram_text">See us on Instagram</string>
    <string name="drawer_problem_text">Report a problem</string>
    <string name="drawer_unlink_text">Unlink this device</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="url_facebook">http://www.facebook.com</string>
    <string name="url_facebook_id">fb://profile/460209240703081</string>
    <string name="url_twitter">http://www.twitter.com</string>
    <string name="url_twitter_id">twitter://user?user_id=1009405560</string>
    <string name="url_instagram">http://www.instagram.com/imonggo</string>
    <string name="url_instagram_id">http://www.instagram.com/_u/imonggo</string>
    <string name="url_report">http://www.instagram.com</string>
    <string name="url_nueca">http://www.nueca.net</string>
    <string name="subject">Report A Problem</string>
    <string name="text">My Problem Is</string>
    <string name="cc">ronie@nueca.net</string>
    <string name="linechart_text_no_data">No Data Available</string>
    <string name="weekly_title_1">Sales This Week</string>
    <string name="weekly_title_2">Sales Last Week</string>
    <string name="weekly_title_3">Sales 2 Weeks Ago</string>
    <string name="weekly_title_4">Sales 3 Weeks Ago</string>
    <string name="notification_no_internet">The internet connection appears to be offline</string>
    <string name="error_dialog_title_invalid_branch">Oops!</string>
    <string name="error_dialog_title_requires_premium_subscription">Requires Premium Subscription</string>
    <string name="error_dialog_message_requires_premium_subscription">You can check it by trying the Premium Features. On the upper right, click "Try Premium Features Free".</string>
    <string name="error_response_requires_premium_subscription">Requires premium subscription.</string>
    <string name="error_dialog_title_branch_is_not_accessible">Oops!</string>
    <string name="error_dialog_title_http_basic">Oops!</string>
    <string name="error_dialog_title_function_is_restricted">Oops! </string>
    <string name="error_dialog_message_invalid_branch">Sorry, this branch no longer exist. Your branch list will be updated.</string>
    <string name="error_dialog_message_branch_is_not_accessible">Sorry, something went wrong. Your branch</string>
    <string name="error_dialog_message_function_is_restricted">Sorry, you are restricted to access this information</string>
    <string name="error_dialog_message_http_basic">Sorry, something went wrong. Please contact admin.</string>
    <string name="error_response_no_internet">no internet</string>
    <string name="error_response_invalid_branch">Invalid branch id.</string>
    <string name="error_response_http_basic">HTTP Basic: Access denied.</string>
    <string name="error_response_branch_is_not_accessible">Branch is not accesible to user.</string>
    <string name="error_response_function_is_restricted">Function is restricted to user.</string>
    <string name="error_response_title">Oops!</string>
    <string name="todayDate">Tuesday, Sep 9, 2015</string>
</resources>
